fix overflow css

--- a/src/index.css
+++ b/src/index.css
@@ -842,6 +842,21 @@ ul{
   }
 
 
+  #scroll{
+    overflow:auto;
+    top: 0; 
+    left:0; 
+    right:0;
+    bottom:0;
+  }
+  #scroll-format{
+    margin: 5px;
+    border-bottom: rgb(10, 124, 238);
+    background:rgba(0,0,0,0.5);
+    box-shadow: #ffccdd;
+  }
+
+
 
 
 .signup{
